--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
   </head>
   <body>
-    <section id="landing-page">
+    <section id="landing-page" onmousemove="moveBackground(event)">
       <nav>
         <figure>
           <img id="personal-logo" src="./assets/logo.svg" alt="" />
         </figure>
         <ul class="nav__link--list">
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -37,12 +37,12 @@
           </li>
           <li class="nav__link">
             <a
-              href="#"
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li class="nav__link">
+          <li class="nav__link" onclick="toggleModal()">
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
@@ -53,7 +53,7 @@
             <a
               href="#"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
-              ><i class="fas fa-adjust"></i
+              ><i class="fas fa-adjust" onclick="toggleContrast()"></i
             ></a>
           </li>
         </ul>
@@ -66,7 +66,7 @@
             I'm a <b class="orange">Frontend Software Engineer</b> with a strong
             passion for building web applications with great user experiences.
             <br />
-            Here's a bit more <b class="orange">about me.</b>
+            Here's a bit more <b class="orange click" onclick="toggleModal()">about me.</b>
           </p>
           <div class="social__list">
             <a href="#" class="social__link click">
@@ -81,7 +81,11 @@
           </div>
         </div>
       </header>
-      <button class="mail__btn click"><i class="fas fa-envelope"></i></button>
+      <a href="#">
+        <button class="mail__btn click" onclick="toggleModal()">
+          <i class="fas fa-envelope"></i>
+      </a>
+      </button>
       <a href="#projects" class="scroll">
         <div class="scroll__icon click"></div>
       </a>
@@ -119,6 +123,7 @@
           </div>
         </div>
         <div class="modal__half modal__contact">
+        <i class="fas fa-times modal__exit click" onclick="toggleModal()"></i>
           <h3 class="modal__title modal__title--contact">
             Let's have a chat!
           </h3>
@@ -149,8 +154,16 @@
             Thanks for the message! Looking forward to speaking to you soon.
           </div>
         </div>
-        <i class="fas fa-times modal__exit click"></i>
       </div>
+      <img src="./assets/semi circle.svg" class="shape shape--0">
+      <img src="./assets/circle.svg" class="shape shape--1">
+      <img src="./assets/squiggly.svg" class="shape shape--2">
+      <img src="./assets/circle.svg" class="shape shape--3">
+      <img src="./assets/triangle.svg" class="shape shape--4">
+      <img src="./assets/circle.svg" class="shape shape--5">
+      <img src="./assets/squiggly.svg" class="shape shape--6">
+      <img src="./assets/circle.svg" class="shape shape--7">
+      <img src="./assets/semi circle.svg" class="shape shape--8">
     </section>
     <section id="projects">
       <div class="container">
@@ -231,25 +244,25 @@
           </figure>
           <div class="footer__social--list">
             <a
-              href="#"
+              href="#" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Github
             </a>
             <a
-              href="#"
+              href="#" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               LinkedIn
             </a>
             <a
-              href="#"
+              href="#" onclick="toggleModal()" 
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
-              Email
+              Contact
             </a>
             <a
-              href="#"
+              href="#" target="_blank"
               class="footer__social--link link__hover-effect link__hover-effect--white"
             >
               Resume
